--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>borellda</groupId>
     <artifactId>opendatamodel</artifactId>
     <version>1.0-SNAPSHOT</version>
-    
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -31,6 +31,11 @@
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9-RC1</version>
         </dependency>
     </dependencies>
 
@@ -64,5 +69,5 @@
         </pluginRepository>
     </pluginRepositories>
 
-    
+
 </project>
